# General_Voronoi_Diagram

./: CMakeLists.txt  HANDOVER.md  README.md  README_JP.md  output_topo.json  plan.txt
data/: anime_topo.json  corridor.pgm  example_config.yaml  room.pgm  room_topo.json  t_junction.pgm  tsudanuma-challenge_nav_resize1.yaml  tsudanuma-challenge_nav_resize2.pgm  tsudanuma_new_topo.json  tsudanuma_topo.json  tsudanuma_topo_corrected.json  tsudanuma_topo_final.json  tsudanuma_topo_fixed.json
include/gvd_topo/: TopologyExtractor.hpp  gvd_topo.hpp  parameters.hpp  ros_adapters.hpp
include/gvd_topo/cli/: CliApplication.hpp
include/gvd_topo/core/: GvdGenerator.hpp  OccupancyGrid.hpp  TopologyExtractor.hpp  Visualizer.hpp
include/gvd_topo/io/: YamlLoader.hpp
include/gvd_topo/utils/: ConfigManager.hpp  Timer.hpp
src/: GvdGenerator.cpp  OccupancyGrid.cpp  TopologyExtractor.cpp  cli_main.cpp  create_test_maps.cpp  main.cpp  parameters.cpp  regression_test.cpp  ros_adapters.cpp  test_ros_adapters.cpp
src/cli/: CliApplication.cpp  cli_main.cpp
src/core/: GvdGenerator.cpp  OccupancyGrid.cpp  TopologyExtractor.cpp  Visualizer.cpp
src/io/: YamlLoader.cpp
src/utils/: ConfigManager.cpp
tests/: room_current.txt
tools/: create_test_maps.cpp  optimized_new_map.cpp  regression_test.cpp
tools/debug_tools/: debug_new_map.cpp  debug_topology.cpp  debug_visualization.cpp
